Bug 90590 - AlpsPS/2 ALPS DualPoint TouchPad has parkinson
Summary: AlpsPS/2 ALPS DualPoint TouchPad has parkinson
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-22 09:53 UTC by Ignacio Casal Quinteiro
Modified: 2016-02-16 11:21 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
evemu log (584.00 KB, text/plain)
2015-05-22 09:53 UTC, Ignacio Casal Quinteiro
Details
still log (301.61 KB, text/plain)
2015-06-03 07:09 UTC, Ignacio Casal Quinteiro
Details
evemu log 2 (131.47 KB, text/plain)
2016-02-08 15:00 UTC, Ignacio Casal Quinteiro
Details

Description Ignacio Casal Quinteiro 2015-05-22 09:53:59 UTC
Created attachment 115971 [details]
evemu log

Using edge scrolling, my touchpad seem to have some parkinson. Attached you can see the log, when scrolling and when keeping the finger over the scrolling area without moving. It seems to me that it is getting too much sensitivity.
Comment 1 Ignacio Casal Quinteiro 2015-05-22 09:57:16 UTC
This is the info about the specific touchpad:

[nacho@winterfell ~]$ xinput --list
⎡ Virtual core pointer                    	id=2	[master pointer  (3)]
⎜   ↳ Virtual core XTEST pointer              	id=4	[slave  pointer  (2)]
⎜   ↳ AlpsPS/2 ALPS DualPoint TouchPad        	id=12	[slave  pointer  (2)]
⎜   ↳ AlpsPS/2 ALPS DualPoint Stick           	id=13	[slave  pointer  (2)]
⎣ Virtual core keyboard                   	id=3	[master keyboard (2)]
    ↳ Virtual core XTEST keyboard             	id=5	[slave  keyboard (3)]
    ↳ Power Button                            	id=6	[slave  keyboard (3)]
    ↳ Video Bus                               	id=7	[slave  keyboard (3)]
    ↳ Power Button                            	id=8	[slave  keyboard (3)]
    ↳ Sleep Button                            	id=9	[slave  keyboard (3)]
    ↳ Laptop_Integrated_Webcam_E4HD           	id=10	[slave  keyboard (3)]
    ↳ AT Translated Set 2 keyboard            	id=11	[slave  keyboard (3)]
    ↳ Dell WMI hotkeys                        	id=14	[slave  keyboard (3)]

It is from a dell precision m4700
Comment 2 Ignacio Casal Quinteiro 2015-05-27 07:28:04 UTC
Is there any other info I can provide to speed this up?
Comment 3 Hans de Goede 2015-06-03 07:04:56 UTC
I do not see anything wrong with the recording evemu-log, can you please describe in more detail what the problem is?

Also I cannot really find a sequence in the log where you are holding your finger still, if there is some specific issue when you're holding your finger still, can you please post a recording with you just holding your finger still? In general please post one recording per "event" rather then putting multiple things in a single recording file.
Comment 4 Ignacio Casal Quinteiro 2015-06-03 07:09:33 UTC
Created attachment 116255 [details]
still log

Here you have the log requested
Comment 5 Hans de Goede 2015-06-15 07:04:15 UTC
Hi,

Peter just added this commit to libinput:

http://cgit.freedesktop.org/wayland/libinput/commit/?id=f13fbc96e84b2bb78bb61886d79aaaeaf8a9b4a1

Which I think may help with your problem, can you try building libinput from master and see if that helps ?

Please also double check that wayland is using the new libinput by running ldd on it.

Regards,

Hans
Comment 6 Ignacio Casal Quinteiro 2015-06-15 08:49:40 UTC
I installed the f22 package pointed out on the downstream bug report and now I do not get the problem anymore. Thanks!
Comment 7 Ignacio Casal Quinteiro 2016-02-08 15:00:42 UTC
Created attachment 121590 [details]
evemu log 2

Today I updated my fedora and I get the same problem again. Attached you can find the new log
Comment 8 Hans de Goede 2016-02-08 15:25:58 UTC
Hi,

Yes, that is a somewhat expected result of this commit:

https://cgit.freedesktop.org/wayland/libinput/commit/?id=f6c2d4b8b5e1968411568d81b47488a655ba47a1

Peter, I assume you're going to take care of this by a device specific quirk ?

Note that Ignacio has the same Rushmore touchpad as my main work laptop (latitude e64x0)  and I've noticed that one being restless before you fixed it with:
https://cgit.freedesktop.org/wayland/libinput/commit/?id=f13fbc96e84b2bb78bb61886d79aaaeaf8a9b4a1

too (and I think I've noticed it regressing too, I've no payed great attention to it sofar though).

So probably best to re-introduce the same hysteresis as before on all alps version 0x310 (== Rushmore) touchpads.

Regards,

Hans
Comment 10 Peter Hutterer 2016-02-09 22:21:36 UTC
commit 07420eec05408e164de2db623bbbf778daad5616
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Tue Feb 9 10:43:45 2016 +1000

    touchpad: init a default hysteresis for ALPS rushmore touchpads
Comment 11 Steven Newbury 2016-02-15 21:33:02 UTC
For some reason the hysteresis isn't being applied for my touchpad:

Input driver version is 1.0.1
Input device ID: bus 0x11 vendor 0x2 product 0x8 version 0x310
Input device name: "AlpsPS/2 ALPS DualPoint TouchPad"
Comment 12 Peter Hutterer 2016-02-15 21:41:02 UTC
Stevehn: do you have this commit? https://cgit.freedesktop.org/wayland/libinput/commit/?id=07420eec05408e164de2db623bbbf778daad5616

it's in version 1.1.7 and 1.1.902 but you'll need to run sudo udevadm hwdb --update after installing (your package manager should do that for you though)
Comment 13 Steven Newbury 2016-02-16 07:54:40 UTC
I do.  I just did sudo udevadm hwdb --update, made no difference.  I just re-emerged libinput again from git master to make sure.  Tested with Xorg/libinput and Weston.
Comment 14 Peter Hutterer 2016-02-16 08:13:57 UTC
Does LIBINPUT_MODEL_ALPS_RUSHMORE show up in the udevadm info /sys/class/input/eventX output?
Comment 15 Ignacio Casal Quinteiro 2016-02-16 09:46:40 UTC
Just let you know that for me works perfectly again after those patches, so maybe the touchpad is different?
Comment 16 Steven Newbury 2016-02-16 10:44:55 UTC
I think I've found the cause.  The libinput udev scripts are incorrectly getting installed into /usr/lib64/udev instead of /lib/udev.  My fault.  I'll correct this and report back.  Sorry for the noise.
Comment 17 Steven Newbury 2016-02-16 11:05:02 UTC
Everything appears to be in the right place now, but:

udevadm info /sys/devices/platform/i8042/serio1/input/input21
P: /devices/platform/i8042/serio1/input/input21
E: ABS=260800001000003
E: DEVPATH=/devices/platform/i8042/serio1/input/input21
E: EV=b
E: ID_FOR_SEAT=input-platform-i8042-serio-1
E: ID_INPUT=1
E: ID_INPUT_TOUCHPAD=1
E: ID_INPUT_TOUCHSCREEN=1
E: ID_PATH=platform-i8042-serio-1
E: ID_PATH_TAG=platform-i8042-serio-1
E: ID_SERIAL=noserial
E: KEY=e420 70000 0 0 0 0
E: MODALIAS=input:b0011v0002p0008e0310-e0,1,3,k110,111,112,145,14A,14D,14E,14F,ra0,1,18,2F,35,36,39,mlsfw
E: NAME="AlpsPS/2 ALPS DualPoint TouchPad"
E: PHYS="isa0060/serio1/input0"
E: PRODUCT=11/2/8/310
E: PROP=9
E: SUBSYSTEM=input
E: TAGS=:seat:
E: USEC_INITIALIZED=27895865462


I'll try rebooting...
Comment 18 Steven Newbury 2016-02-16 11:21:43 UTC
Everything is working now.  For some reason udev wasn't using the new rules after reloading.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.